# FreeTimeGsVanilla

./: .gitignore  AGENTS.md  ERRORFIX.md  FreeTimeGsVanilla.code-workspace  LATER_PLANS.md  README.md  WORKLOG.md  combine_frames_fast_keyframes.py  notes.md  pyproject.toml  run_full.sh  run_mp4_pipeline.sh  run_pipeline.sh  run_small.sh  simple_trainer_freetime_gaussians.py  task_plan.md  track_velocity.py  triangulate_romav2.py
archive/: task_plan_2026-02-23_041354.md
datasets/: FreeTime_dataset.py  __init__.py  normalize.py  traj.py
openspec/changes/splat4d-delta-v1-sh-updates/: design.md  proposal.md  tasks.md
openspec/changes/splat4d-delta-v1-sh-updates/specs/gsplat-unity-splat4d-delta-v1-runtime/: spec.md
openspec/changes/splat4d-delta-v1-sh-updates/specs/splat4d-delta-v1-exporter/: spec.md
specs/: freetimegs_to_splat4d_mapping.md  mp4_to_4dgs_pipeline.md
src/: combine_frames_fast_keyframes.py  preprocess_mp4_freetimegs.py  simple_trainer_freetime_4d_pure_relocation.py  viewer_4d.py
tmp/papers/: FreeTimeGS_CVPR2025.txt
tools/: beautiful-mermaid-rs  mermaid-validator  synth_dynamic_shn_ckpt.py
tools/exportor/: FreeTimeGsCheckpointToSog4D.md  export_sog4d.py  export_splat4d.py  spec.md
tools/mermaid/: beautiful-mermaid-rs.mjs  mermaid-validator.mjs  package.json  pnpm-lock.yaml
