[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "freetimegs"
version = "0.1.0"
description = "4D Gaussian Splatting training pipeline"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "pycolmap",
    "romatch",
    "viser",
    "nerfview==0.0.2",
    "imageio[ffmpeg]",
    "numpy>=1.26,<2.0",
    "scikit-learn",
    "tqdm",
    "torchmetrics[image]<1.5",
    "opencv-python",
    "tyro>=0.8.8",
    "Pillow",
    "tensorboard",
    "tensorly",
    "pyyaml",
    "matplotlib",
    "fused-ssim",
    "plas",
    "natsort",
    "gsplat",
    "plotly>=6.5.1",
    "open3d>=0.19.0",
]

[tool.uv]
required-version = ">=0.10.4"
override-dependencies = ["pandas>=2.2"]
no-build-isolation-package = ["fused-ssim", "gsplat"]

[tool.uv.sources]
pycolmap = { git = "https://github.com/JasonLSC/pycolmap.git" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim", rev = "1272e21a282342e89537159e4bad508b19b34157" }
plas = { git = "https://github.com/fraunhoferhhi/PLAS.git" }
gsplat = { git = "https://github.com/nerfstudio-project/gsplat.git" }

[[tool.uv.dependency-metadata]]
name = "fused-ssim"
version = "0.0.0"
requires-dist = []

[[tool.uv.dependency-metadata]]
name = "gsplat"
version = "1.5.3"
requires-dist = ["jaxtyping", "ninja", "numpy", "rich", "torch"]
